# kg-augmented-lm

./: README.md  environment.yaml  pyproject.toml  requirements.txt
configs/: eval.yaml  train.yaml
configs/data/: wikidata5m.yaml  wikigraphs.yaml
configs/hparams_search/: wikigraphs_optuna.yaml  wikigraphs_wandb_sweeps.yaml
configs/logger/: wandb.yaml
configs/model/: kg_lm.yaml
notebooks/: 01-mm-perceiver.ipynb  01-mm-wikidata.ipynb  01-mm-wikidata_alias_trie.ipynb  02-mm-natural_questions.ipynb  02temp-mm-natural_questions.ipynb  03-mm-subgraph_retrieval.ipynb  04-mm-tokenizer.ipynb  04-mm-transformer.ipynb  05-mm-torchmetrics.ipynb  06-mm-entity_embeddings.ipynb
scripts/download_data/: download_natural_questions.sh  download_wikigraphs.sh  download_wikitext5m.sh
src/data/: amesim_datamodule.py  wikidata5m_datamodule.py  wikigraphs_datamodule.py
src/data/components/: entity_linker.py  graph_processor.py  graph_processor_slow.py  token_masking.py
src/data/components/natural_questions/: download.py
src/data/components/wikidata5m/: dataset.py  download.py  preprocessing.py
src/data/components/wikigraphs/: dataset.py  download.py  preprocessing.py  tokenizers.py  utils.py
src/models/: lit_module.py
src/models/components/: encoding_layers.py  graph_transformer.py  kg_augmented_lm.py  masked_token_prediction.py  multimodal_bottleneck_transformer.py  multimodal_fusion.py  online_context_retrieval.py
tests/: test_datamodules.py  test_models.py
