[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "kg-augmented-lm"
version = "0.1.0"
description = "About Leveraging knowledge graphs to learn a more factually grounded language model for retrieval and question answering downstream tasks."
authors = ["Marco Moldovan <marco.moldovan.1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.15.8"
torch = ">=2.0.0, !=2.0.1"
lightning = "^2.0.7"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
pre-commit = "^3.3.3"
rich = "^13.5.2"
pytest = "^7.4.0"
sh = "^2.0.6"
einops = "^0.6.1"
torch-geometric = "^2.3.1"
rotary-embedding-torch = "^0.3.2"
pandas = "^2.0.3"
nltk = "^3.8.1"
rootutils = "^1.0.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
